<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.openmrs.module</groupId>
    <artifactId>mirebalaismetadata</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Mirebalais Metadata Module</name>
    <description>Contains metadata and configuration settings for PIH's Mirebalais implementation</description>
    <url>https://wiki.openmrs.org/display/docs/Mirebalais+Metadata+Module+Module</url>

    <developers>
        <developer>
            <name>PIH</name>
        </developer>
    </developers>

    <organization>
        <name>PIH</name>
        <url>http://pih.org</url>
    </organization>

    <scm>
        <connection>scm:git:git@github.com:PIH/openmrs-module-mirebalaismetadata.git</connection>
        <developerConnection>scm:git:git@github.com:PIH/openmrs-module-mirebalaismetadata.git</developerConnection>
        <url>scm:git:git@github.com:PIH/openmrs-module-mirebalaismetadata.git</url>
    </scm>

    <distributionManagement>
        <repository>
            <id>openmrs-repo-modules-pih</id>
            <name>Modules</name>
            <url>http://mavenrepo.openmrs.org/nexus/content/repositories/modules-pih/</url>
        </repository>
        <snapshotRepository>
            <id>openmrs-repo-modules-pih-snapshots</id>
            <name>OpenMRS Snapshots</name>
            <url>http://mavenrepo.openmrs.org/nexus/content/repositories/modules-pih-snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <modules>
        <module>api</module>
        <module>omod</module>
    </modules>

    <properties>
        <openMRSVersion>2.3.0-SNAPSHOT</openMRSVersion>
        <openMRSwebVersion>2.3.0-SNAPSHOT</openMRSwebVersion>
        <pihcoreVersion>1.1.0-SNAPSHOT</pihcoreVersion>
        <emrapiVersion>1.28.0</emrapiVersion>
        <paperrecordVersion>1.3.0</paperrecordVersion>
        <emrVersion>2.2.0</emrVersion>
        <uiframeworkVersion>3.16.0</uiframeworkVersion>
        <appframeworkVersion>2.14.0</appframeworkVersion>
        <metadatasharingVersion>1.6.0</metadatasharingVersion>
        <metadatamappingVersion>1.3.4</metadatamappingVersion>
        <metadatadeployVersion>1.11.0</metadatadeployVersion>
        <htmlformentryVersion>3.9.2</htmlformentryVersion>
        <htmlformentry19extVersion>1.7</htmlformentry19extVersion>
        <htmlformentryuiVersion>1.10.0</htmlformentryuiVersion>
        <calculationVersion>1.2</calculationVersion>
        <reportingVersion>1.19.0</reportingVersion>
        <reportinguiVersion>1.0</reportinguiVersion>
        <reportingrestVersion>1.10.0</reportingrestVersion>
        <htmlwidgetsVersion>1.9.0</htmlwidgetsVersion>
        <serializationxstreamVersion>0.2.14</serializationxstreamVersion>
        <idgenVersion>4.5.0</idgenVersion>
        <namephoneticsVersion>1.6.0</namephoneticsVersion>
        <pacsintegrationVersion>1.7.0</pacsintegrationVersion>
        <addresshierarchyVersion>2.11.0</addresshierarchyVersion>
        <providermanagementVersion>2.10.0</providermanagementVersion>
        <eventVersion>2.5</eventVersion>
        <logicVersion>0.5.2</logicVersion>
        <importpatientfromwsVersion>1.0</importpatientfromwsVersion>
        <uilibraryVersion>1.5</uilibraryVersion>
        <appuiVersion>1.4</appuiVersion>
        <dispensingVersion>1.1.0</dispensingVersion>
        <uicommonsVersion>2.7.0-SNAPSHOT</uicommonsVersion>
        <registrationcoreVersion>1.9.0</registrationcoreVersion>
        <registrationappVersion>1.15.0</registrationappVersion>
        <radiologyappVersion>1.5.0</radiologyappVersion>
        <coreappsVersion>1.27.0</coreappsVersion>
        <webservicesRestVersion>2.23.0-SNAPSHOT</webservicesRestVersion>
        <appointmentschedulingVersion>1.9.0</appointmentschedulingVersion>
        <appointmentschedulinguiVersion>1.7.0</appointmentschedulinguiVersion>
        <testutilsVersion>1.7.0-SNAPSHOT</testutilsVersion>
        <printerVersion>1.4.0</printerVersion>
        <allergyuiVersion>1.8.1</allergyuiVersion>
        <chartsearchVersion>1.5</chartsearchVersion>
        <haiticoreVersion>1.0.0</haiticoreVersion>
        <!-- Need to phase this out. -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <!-- Begin OpenMRS core -->

        <dependency>
            <groupId>org.openmrs.api</groupId>
            <artifactId>openmrs-api</artifactId>
            <version>${openMRSVersion}</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.api</groupId>
            <artifactId>openmrs-api</artifactId>
            <version>${openMRSVersion}</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.web</groupId>
            <artifactId>openmrs-web</artifactId>
            <version>${openMRSVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.test</groupId>
            <artifactId>openmrs-test</artifactId>
            <version>${openMRSVersion}</version>
            <type>pom</type>
            <scope>test</scope>
        </dependency>

        <!-- End OpenMRS core -->

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>metadatasharing-api</artifactId>
            <version>${metadatasharingVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>metadatasharing-api-common</artifactId>
            <version>${metadatasharingVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>metadatadeploy-api</artifactId>
            <version>${metadatadeployVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>metadatadeploy-api-1.10</artifactId>
            <version>${metadatadeployVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>metadatamapping-api</artifactId>
            <version>${metadatamappingVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>pihcore-api</artifactId>
            <version>${pihcoreVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>emrapi-api</artifactId>
            <version>${emrapiVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>emrapi-api-1.12</artifactId>
            <version>${emrapiVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>emrapi-api-2.2</artifactId>
            <version>${emrapiVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>addresshierarchy-api</artifactId>
            <version>${addresshierarchyVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>registrationcore-api</artifactId>
            <version>${registrationcoreVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>radiologyapp-api</artifactId>
            <version>${radiologyappVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>providermanagement-api</artifactId>
            <version>${providermanagementVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>emr-api</artifactId>
            <version>${emrVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>htmlformentry-api</artifactId>
            <version>${htmlformentryVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>htmlformentry-api-1.10</artifactId>
            <version>${htmlformentryVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>htmlformentry-api-2.0</artifactId>
            <version>${htmlformentryVersion}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>reporting-api</artifactId>
            <version>${reportingVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>calculation-api</artifactId>
            <version>${calculationVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>serialization.xstream-api</artifactId>
            <version>${serializationxstreamVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>serialization.xstream-api-2.0</artifactId>
            <version>${serializationxstreamVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>uiframework-api</artifactId>
            <version>${uiframeworkVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>idgen-api</artifactId>
            <version>${idgenVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>namephonetics-api</artifactId>
            <version>${namephoneticsVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>paperrecord-api</artifactId>
            <version>${paperrecordVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>printer-api</artifactId>
            <version>${printerVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>coreapps-api</artifactId>
            <version>${coreappsVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>pacsintegration-api</artifactId>
            <version>${pacsintegrationVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs</groupId>
            <artifactId>event-api</artifactId>
            <version>${eventVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs</groupId>
            <artifactId>event-api-2.x</artifactId>
            <version>${eventVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>dispensing-api</artifactId>
            <version>${dispensingVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>appframework-api</artifactId>
            <version>${appframeworkVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>htmlformentryui-api</artifactId>
            <version>${htmlformentryuiVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>registrationapp-api</artifactId>
            <version>${registrationappVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>haiticore-api</artifactId>
            <version>${haiticoreVersion}</version>
            <scope>provided</scope>
        </dependency>

    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <target>1.6</target>
                        <source>1.6</source>
                        <encoding>UTF-8</encoding>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.openmrs.maven.plugins</groupId>
                    <artifactId>maven-openmrs-plugin</artifactId>
                    <version>1.0.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>2.4</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.17</version>
                    <configuration>
                        <runOrder>alphabetical</runOrder>
                        <!-- https://talk.openmrs.org/t/error-could-not-find-or-load-main-class-org-apache-maven-surefire-booter-forkedbooter/20509 -->
                        <argLine>-Xmx1024m -Xms1024m -XX:MaxPermSize=512m -Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
                        <includes>
                            <include>**/*Test.java</include>
                        </includes>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.1</version>
                <configuration>
                    <generateBackupPoms>false</generateBackupPoms>
                    <properties>
                        <property>
                            <name>openMRSVersion</name>
                            <version>[2.2.0-SNAPSHOT,2.3.0-!)</version>
                            <banSnapshots>true</banSnapshots>
                        </property>
                        <property>
                            <name>openMRSwebVersion</name>
                            <version>[2.2.0-SNAPSHOT,2.3.0-!)</version>
                            <banSnapshots>true</banSnapshots>
                        </property>
                    </properties>
                </configuration>
            </plugin>
        </plugins>

    </build>

    <repositories>
        <repository>
            <id>openmrs-repo</id>
            <name>OpenMRS Nexus Repository</name>
            <url>http://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>openmrs-repo</id>
            <name>OpenMRS Nexus Repository</name>
            <url>http://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

</project>
